# fox-button-box

./: CMakeLists.txt  usb_descriptors.c
include/: button.h  buttons.h  core1_entry.h  encoder.h  gamepad.h  multi_switch.h
src/: button.c  buttons.c  core1_entry.c  encoder.c  gamepad.c  main.c  multi_switch.c  usb_descriptors.c
